Update Google Analytics guide

--- a/src/content/docs/guides/analytics/google-analytics.mdx
+++ b/src/content/docs/guides/analytics/google-analytics.mdx
@@ -7,7 +7,33 @@ service: Google Analytics
 ---
 import List from '~/components/List.astro';
 
-[Google Analytics](https://usefathom.com/) is an analytics service that enables you to measure traffic and engagement across your websites and apps.
+[Google Analytics](https://marketingplatform.google.com/about/analytics/) is an analytics service that enables you to measure traffic and engagement across your websites and apps.
+
+:::note[Using Google Analytics GA4 with CSP]
+Don't forget to update your `Content-Security-Policy` HTTP response header when using Google Analytics. [See an example](https://content-security-policy.com/examples/google-analytics/)
+:::
+
+## Set up Google Analytics
+
+To follow this guide, you'll need an existing [Thulite](https://thulite.io/) site and a [Google Analytics 4](https://support.google.com/analytics/answer/10089681) property.
+
+### Add script
+
+Add to `layouts/partials/head/script-header.html`:
+
+```html
+{{ template "_internal/google_analytics.html" . }}
+```
+
+### Add tracking ID
+
+Add your tracking ID to `config/_default/hugo.toml`:
+
+```toml
+[services]
+  [services.googleAnalytics]
+    ID = 'G-MEASUREMENT_ID'
+```
 
 ## Official Resources
 
