--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -2,6 +2,7 @@
 title: Getting Started
 description: This guide will help you get started with a new Thulite project.
 tableOfContents: true
+prev: false
 ---
 import Button from '~/components/Button.astro'
 import { Tabs, TabItem } from '@astrojs/starlight/components';
