Update for migration from Hyas to Thulite

--- a/src/content/docs/basics/project-structure.mdx
+++ b/src/content/docs/basics/project-structure.mdx
@@ -6,7 +6,7 @@ sidebar:
 ---
 import FileTree from '~/components/FileTree.astro';
 
-Your new Thulite project generated from the `create hyas` CLI wizard already includes some files and folders. Others, you will create yourself and add to Thulite' existing file structure.
+Your new Thulite project generated from the `create thulite` CLI wizard already includes some files and folders. Others, you will create yourself and add to Thulite' existing file structure.
 
 Here's how a Thulite project is organized, and some files you will find in your new project.
 
