--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -12,22 +12,22 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 ## Quick Start
 
-Get a new Thulite project up and running locally with our helpful `create-hyas` CLI wizard!
+Get a new Thulite project up and running locally with our helpful `create-thulite` CLI wizard!
 
 <Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
-npm create hyas@latest
+npm create thulite@latest
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
-pnpm create hyas@latest
+pnpm create thulite@latest
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
-yarn create hyas
+yarn create thulite
 ```
   </TabItem>
 </Tabs>
@@ -37,11 +37,11 @@ Our [Installation Guide](/install/auto/) has step-by-step instructions for insta
 {/*
 ## Quick Try
 
-Visit [new.gethyas.com](https://new.gethyas.com/) and choose from a variety of templates to get started. Play around with a full, working version of Thulite right in your browser!
+Visit [new.thulite.io](https://new.thulite.io/) and choose from a variety of templates to get started. Play around with a full, working version of Thulite right in your browser!
 
 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
-  <Button href="https://gitpod.io/#https://github.com/gethyas/basic-starter">Launch basic template</Button>
-  <Button variant="outline" href="https://new.gethyas.com/">View all templates →</Button>
+  <Button href="https://gitpod.io/#https://github.com/thuliteio/basic-starter">Launch basic template</Button>
+  <Button variant="outline" href="https://new.thulite.io/">View all templates →</Button>
 </div>
 */}
 
@@ -61,13 +61,13 @@ Visit [new.gethyas.com](https://new.gethyas.com/) and choose from a variety of t
     - [CMS](/guides/cms/)
   </Card>
   <Card title="What's going on?" icon="information">
-    - [Roadmap 2024](https://github.com/orgs/gethyas/discussions/462)
-    - [Discussions](https://github.com/orgs/gethyas/discussions)
+    - [Roadmap 2024](https://github.com/orgs/thuliteio/discussions/462)
+    - [Discussions](https://github.com/orgs/thuliteio/discussions)
     - [Blog](https://thulite.io/blog/)
   </Card>
   <Card title="Other docs" icon="document">
     - [Doks](https://getdoks.org/)
-    - [Images](https://images.gethyas.com/)
-    - [SEO](https://seo.gethyas.com/)
+    - [Images](https://images.thulite.io/)
+    - [SEO](https://seo.thulite.io/)
   </Card>
 </CardGrid>
