--- a/src/content/docs/guides/cms/tina-cms.mdx
+++ b/src/content/docs/guides/cms/tina-cms.mdx
@@ -46,8 +46,8 @@ To get started, you'll need an existing Thulite project.
     // package.json
     {
         "scripts": {
-            "dev": "hyas dev",
-            "dev": "tinacms dev -c \"hyas dev\""
+            "dev": "hugo server --disableFastRender --noHTTPCache"
+            "dev": "tinacms dev -c \"hugo server --disableFastRender --noHTTPCache\""
         }
     }
     ```
