--- a/src/content/docs/guides/deploy.mdx
+++ b/src/content/docs/guides/deploy.mdx
@@ -28,11 +28,11 @@ These host platforms automatically detect pushes to your Thulite project's sourc
     Many common hosts will recognize your project as a Thulite site, and should choose the appropriate configuration settings to build and deploy your site as shown below. (If not, these settings can be changed.)
 
     :::note[Deploy settings]
-    - **Build Command:** `hyas build` or `npm run build`
+    - **Build Command:** `npm run build`
     - **Publish directory:** `public`
     :::
 
-3. Click "Deploy" and your new website will be created at a unique URL for that host (e.g. `new-hyas-site.netlify.app`).
+3. Click "Deploy" and your new website will be created at a unique URL for that host (e.g. `new-thulite-site.netlify.app`).
 
 The host will be automatically configured to watch your Git provider's main branch for changes, and to rebuild and republish your site at each new commit. These settings can typically be configured in your host provider's dashboard UI.
 
@@ -67,7 +67,7 @@ Some hosts will have their own command line interface (CLI) you can install glob
     Many common hosts will build and deploy your site for you. They will usually recognize your project as a Thulite site, and should choose the appropriate configuration settings to build and deploy as shown below. (If not, these settings can be changed.)
 
     :::note[Deploy settings]
-    - **Build Command:** `hyas build` or `npm run build`
+    - **Build Command:** `npm run build`
     - **Publish directory:** `public`
     :::
 
