--- a/src/content/docs/guides/integrations.mdx
+++ b/src/content/docs/guides/integrations.mdx
@@ -29,19 +29,19 @@ Add an integration to your site by running the following command in your project
   <TabItem label="npm">
 ```bash
   # Example: add Images
-  npm install @hyas/images@latest
+  npm install @thulite/images@latest
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
   # Example: add Images
-  pnpm add @hyas/images@latest
+  pnpm add @thulite/images@latest
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
   # Example: add Images
-  yarn add @hyas/images@latest
+  yarn add @thulite/images@latest
 ```
   </TabItem>
 </Tabs>
@@ -58,19 +58,19 @@ To upgrade an integration, use the appropriate command for your package manager.
   <TabItem label="npm">
 ```bash
   # Example: upgrade Images
-  npm install @hyas/images@latest
+  npm install @thulite/images@latest
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
   # Example: upgrade Images
-  pnpm add @hyas/images@latest
+  pnpm add @thulite/images@latest
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
   # Example: upgrade Images
-  yarn add @hyas/images@latest
+  yarn add @thulite/images@latest
 ```
   </TabItem>
 </Tabs>
@@ -83,19 +83,19 @@ To remove an integration, uninstall the integration from your project.
   <TabItem label="npm">
 ```bash
   # Example: remove Images
-  npm uninstall @hyas/images
+  npm uninstall @thulite/images
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
   # Example: remove Images
-  pnpm uninstall @hyas/images
+  pnpm uninstall @thulite/images
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
   # Example: remove Images
-  yarn remove @hyas/images
+  yarn remove @thulite/images
 ```
   </TabItem>
 </Tabs>
