--- a/src/content/docs/guides/integrations/bolt-core.mdx
+++ b/src/content/docs/guides/integrations/bolt-core.mdx
@@ -1,9 +1,9 @@
 ---
-title: "@hyas/bolt-core"
+title: "@thulite/bolt-core"
 description: Core integration for the Bolt theme
 type: integration
 stub: false
-service: "@hyas/bolt-core"
+service: "@thulite/bolt-core"
 category: theme
 ---
 
