--- a/src/content/docs/guides/integrations/doks-core.mdx
+++ b/src/content/docs/guides/integrations/doks-core.mdx
@@ -1,9 +1,9 @@
 ---
-title: "@hyas/doks-core"
+title: "@thulite/doks-core"
 description: Core integration for the Doks theme
 type: integration
 stub: false
-service: "@hyas/doks-core"
+service: "@thulite/doks-core"
 category: theme
 ---
 
