--- a/src/content/docs/guides/integrations/images.mdx
+++ b/src/content/docs/guides/integrations/images.mdx
@@ -1,18 +1,18 @@
 ---
-title: "@hyas/images"
+title: "@thulite/images"
 description: Official Images integration for Thulite
 type: integration
 stub: false
-service: "@hyas/images"
+service: "@thulite/images"
 category: other
 ---
 import List from '~/components/List.astro';
 
-[Images](https://images.gethyas.com/) is the official Images integration for the Thulite framework.
+[Images](https://images.thulite.io/) is the official Images integration for the Thulite framework.
 
 ## Official Resources
 
 <List emoji="books">
-- [Getting Started](https://images.gethyas.com/docs/start-here/getting-started/)
-- [GitHub repository](https://github.com/gethyas/images)
+- [Getting Started](https://images.thulite.io/docs/start-here/getting-started/)
+- [GitHub repository](https://github.com/thuliteio/images)
 </List>
