--- a/src/content/docs/guides/integrations/tailwind.mdx
+++ b/src/content/docs/guides/integrations/tailwind.mdx
@@ -1,9 +1,9 @@
 ---
-title: "@hyas/tailwindcss"
+title: "@thulite/tailwindcss"
 description: Tailwind CSS integration for Thulite
 type: integration
 stub: false
-service: "@hyas/tailwindcss"
+service: "@thulite/tailwindcss"
 category: renderer
 ---
 
