--- a/src/content/docs/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/guides/upgrade-to/v2.mdx
@@ -46,7 +46,7 @@ Replace the contents of your project's `package.json` with the following:
 ```json
 // package.json
 {
-  "name": "hyas-project",
+  "name": "thulite-project",
   "version": "0.0.0",
   "description": "Thulite",
   "author": "Thulite",
@@ -71,17 +71,17 @@ Install the latest Thulite project dependencies inside your project:
 <Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
-npm install gethyas@latest
+npm install thulite@latest
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
-pnpm install gethyas@latest
+pnpm install thulite@latest
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
-yarn add gethyas@latest
+yarn add thulite@latest
 ```
   </TabItem>
 </Tabs>
@@ -115,17 +115,17 @@ Optionally, install the the recommended integrations in your project:
 <Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
-npm install @hyas/images@latest @hyas/seo@latest
+npm install @thulite/images@latest @thulite/seo@latest
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
-pnpm install @hyas/images@latest @hyas/seo@latest
+pnpm install @thulite/images@latest @thulite/seo@latest
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
-yarn add @hyas/images@latest @hyas/seo@latest
+yarn add @thulite/images@latest @thulite/seo@latest
 ```
   </TabItem>
 </Tabs>
@@ -141,8 +141,8 @@ But, if you notice errors or unexpected behavior, please check below for what ha
 Check your project's configuration for Thulite and the recommended integrations:
 
 - [Create configuration files](/install/manual/#6-create-configuration-files)
-- [Images](https://images.gethyas.com/docs/start-here/manual-setup/)
-- [SEO](https://seo.gethyas.com/docs/start-here/manual-setup/)
+- [Images](https://images.thulite.io/docs/start-here/manual-setup/)
+- [SEO](https://seo.thulite.io/docs/start-here/manual-setup/)
 
 ## Known Issues
 
