--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -12,7 +12,7 @@ hero:
       icon: right-arrow
       variant: primary
     - text: View on GitHub
-      link: https://github.com/gethyas/hyas
+      link: https://github.com/thuliteio/thulite
       icon: external
 ---
 
