--- a/src/content/docs/install/auto.mdx
+++ b/src/content/docs/install/auto.mdx
@@ -5,7 +5,7 @@ description: A reference page in my new Starlight docs site.
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-Ready to install Thulite? Follow this guide to using the `create hyas` CLI to get started.
+Ready to install Thulite? Follow this guide to using the `create thulite` CLI to get started.
 
 :::note[Prefer to install Thulite manually?]
 Read our [step-by-step manual installation guide](/install/manual/) instead.
@@ -20,10 +20,10 @@ Read our [step-by-step manual installation guide](/install/manual/) instead.
 
 ## Installation
 
-`create-hyas` is the fastest way to start a new Thulite project from scratch. It will walk you through every step of setting up your new Thulite project. It allows you to choose from a few different official starter templates. Or, you can [use any existing project on GitHub with the `degit` command](http://localhost:4321/install/auto/#community).
+`create-thulite` is the fastest way to start a new Thulite project from scratch. It will walk you through every step of setting up your new Thulite project. It allows you to choose from a few different official starter templates. Or, you can [use any existing project on GitHub with the `degit` command](http://localhost:4321/install/auto/#community).
 
 :::tip[Online previews]
-Prefer to try Thulite in your browser? Visit [new.gethyas.com](https://new.gethyas.com/) to browse our starter templates and spin up a new Thulite project without ever leaving your browser.
+Prefer to try Thulite in your browser? Visit [new.thulite.io](https://new.thulite.io/) to browse our starter templates and spin up a new Thulite project without ever leaving your browser.
 :::
 
 ### 1. Run the Setup Wizard
@@ -33,22 +33,22 @@ Run the following command in your terminal to start our handy install wizard:
 <Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
-npm create hyas@latest
+npm create thulite@latest
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
-pnpm create hyas@latest
+pnpm create thulite@latest
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
-yarn create hyas
+yarn create thulite
 ```
   </TabItem>
 </Tabs>
 
-You can run `create-hyas` anywhere on your machine, so there's no need to create a new empty directory for your project before you begin. If you don’t have an empty directory yet for your new project, the wizard will help create one for you automatically.
+You can run `create-thulite` anywhere on your machine, so there's no need to create a new empty directory for your project before you begin. If you don’t have an empty directory yet for your new project, the wizard will help create one for you automatically.
 
 If all goes well, you should see a "Done" message followed by the next steps.
 
@@ -106,7 +106,7 @@ If you aren't able to open your project in the browser, go back to the terminal 
 
 ## Starter Templates
 
-You can also start a new Thulite project based on an [official example](https://github.com/gethyas/create-hyas#templates) by passing a `--template` argument to the `create hyas` command. Or, by using a tool like [degit](https://github.com/Rich-Harris/degit) to scaffold your project with the `main` branch of any GitHub repository.
+You can also start a new Thulite project based on an [official example](https://github.com/thuliteio/create-thulite#templates) by passing a `--template` argument to the `create thulite` command. Or, by using a tool like [degit](https://github.com/Rich-Harris/degit) to scaffold your project with the `main` branch of any GitHub repository.
 
 ### Official
 
@@ -115,20 +115,20 @@ Create a new project with an official example — for example with Doks:
 <Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
-# Syntax: npm create hyas@latest -- --template <example-name>
-npm create hyas@latest -- --template doks
+# Syntax: npm create thulite@latest -- --template <example-name>
+npm create thulite@latest -- --template doks
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
-# Syntax: pnpm create hyas@latest --template <example-name>
-pnpm create hyas@latest --template doks
+# Syntax: pnpm create thulite@latest --template <example-name>
+pnpm create thulite@latest --template doks
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
-# Syntax: yarn create hyas --template <example-name>
-yarn create hyas@latest --template doks
+# Syntax: yarn create thulite --template <example-name>
+yarn create thulite@latest --template doks
 ```
   </TabItem>
 </Tabs>
@@ -158,7 +158,7 @@ yarn dlx degit h-enk/simply-cyan my-thulite-project
   </TabItem>
 </Tabs>
 
-Explore our [themes and starters showcase](https://thulite.io/themes/) where you can browse themes for blogs, portfolios, documentation, landing pages, and more! Or, [search on GitHub](https://github.com/search?o=desc&q=hyas+starter&s=stars&type=repositories) for even more starter projects.
+Explore our [themes and starters showcase](https://thulite.io/themes/) where you can browse themes for blogs, portfolios, documentation, landing pages, and more! Or, [search on GitHub](https://github.com/search?o=desc&q=thulite+starter&s=stars&type=repositories) for even more starter projects.
 
 ## Next Steps
 
