--- a/src/content/docs/upgrade-thulite.mdx
+++ b/src/content/docs/upgrade-thulite.mdx
@@ -8,9 +8,9 @@ This guide covers how to update your version of Thulite and related dependencies
 
 ## What has changed?
 
-See [all release notes](https://github.com/gethyas/hyas/releases) or the [latest release notes](https://github.com/gethyas/hyas/releases/latest).
+See [all release notes](https://github.com/thuliteio/thulite/releases) or the [latest release notes](https://github.com/thuliteio/thulite/releases/latest).
 
-You can find an exhaustive list of all changes in [Thulite' changelog](https://github.com/gethyas/hyas/blob/main/CHANGELOG.md), and important instructions for upgrading to each new [major version](#major-changes) in our [upgrade guides](#upgrade-guides).
+You can find an exhaustive list of all changes in [Thulite' changelog](https://github.com/thuliteio/thulite/blob/main/CHANGELOG.md), and important instructions for upgrading to each new [major version](#major-changes) in our [upgrade guides](#upgrade-guides).
 
 ## Upgrade to the latest version
 
@@ -20,48 +20,48 @@ To update Thulite and integrations to their current versions, use the appropriat
   <TabItem label="npm">
 ```bash
 # Example: upgrade Thulite with Images and SEO integrations
-npm install gethyas@latest @hyas/images@latest @hyas/seo@latest
+npm install thulite@latest @thulite/images@latest @thulite/seo@latest
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
 # Example: upgrade Thulite with Images and SEO integrations
-pnpm install gethyas@latest @hyas/images@latest @hyas/seo@latest
+pnpm install thulite@latest @thulite/images@latest @thulite/seo@latest
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
 # Example: upgrade Thulite with Images and SEO integrations
-yarn add gethyas@latest @hyas/images@latest @hyas/seo@latest
+yarn add thulite@latest @thulite/images@latest @thulite/seo@latest
 ```
   </TabItem>
 </Tabs>
 
 ### Install a specific version number
 
-To install a specific [version of Thulite](https://www.npmjs.com/package/gethyas?activeTab=versions) or integrations, use the appropriate command for your package manager.
+To install a specific [version of Thulite](https://www.npmjs.com/package/thulite?activeTab=versions) or integrations, use the appropriate command for your package manager.
 
 <Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
-npm install gethyas@2.4.1 @hyas/images@3.1.0
+npm install thulite@2.4.1 @thulite/images@3.1.0
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
-pnpm install gethyas@2.4.1 @hyas/images@3.1.0
+pnpm install thulite@2.4.1 @thulite/images@3.1.0
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
-yarn add gethyas@2.4.1 @hyas/images@3.1.0
+yarn add thulite@2.4.1 @thulite/images@3.1.0
 ```
   </TabItem>
 </Tabs>
 
 ## Documentation updates
 
-This documentation is updated for each [minor release](#minor-changes) and [major version](#major-changes) release. When new features are added, or existing usage changes, the docs will update to reflect the __current behavior of Hyas__. If your project is not updated, then you may notice some behaviors do not match the up-to-date documentation.
+This documentation is updated for each [minor release](#minor-changes) and [major version](#major-changes) release. When new features are added, or existing usage changes, the docs will update to reflect the __current behavior of Thulite__. If your project is not updated, then you may notice some behaviors do not match the up-to-date documentation.
 
 New features are added to docs with the specific version number in which they were added. This means that if you have not updated to the latest release of Thulite, some documented features may be unavailable. Always check the `Added in:` version number and make sure your project is updated before attempting to use new features!
 
@@ -71,7 +71,7 @@ If you have not upgraded to the latest major version of Thulite, you may encount
 
 After every [major version release](#major-changes), you will find an __upgrade guide__ with information about important changes and instructions for upgrading your project code.
 
-The main Thulite documentation pages are always __accurate for the latest released version of Hyas__. They do not describe or compare to how things worked in previous versions, nor do they highlight updated or changed behavior.
+The main Thulite documentation pages are always __accurate for the latest released version of Thulite__. They do not describe or compare to how things worked in previous versions, nor do they highlight updated or changed behavior.
 
 See the upgrade guides below for an explanation of changes, comparing the new version to the old. The upgrade guides include everything that could require you to change your own code: breaking changes, deprecations, feature removals and replacements as well as updated usage guidance. Each change to Thulite includes a "What should I do?" section to help you successfully update your project code.
 
@@ -81,7 +81,7 @@ See the upgrade guides below for an explanation of changes, comparing the new ve
 
 Documentation for older versions of Thulite is not maintained, but is available as a static snapshot. Use these versions of docs if you are unable to upgrade your project, but still wish to consult guides and reference:
 
-- [unmaintained v1.5.8 snapshot](https://deploy-preview-255--gethyas.netlify.app/)
+- [unmaintained v1.5.8 snapshot](https://deploy-preview-255--thulite.netlify.app/)
 
 ## Semantic versioning
 
@@ -93,7 +93,7 @@ Semantic versioning enforces a pattern of `X.Y.Z` for software version numbers. 
 
 Patch changes are the least disruptive changes. They do not change the way you use Thulite, and no change to your own code is required when you update.
 
-When Thulite issues a "patch" version, the last number increases. (e.g. `gethyas@2.4.1` -> `gethyas@2.4.2`)
+When Thulite issues a "patch" version, the last number increases. (e.g. `thulite@2.4.1` -> `thulite@2.4.2`)
 
 Patches may be released for reasons such as:
 
