Update for migration from Hyas to Thulite

--- a/src/content/docs/guides/integrations/bolt-core.mdx
+++ b/src/content/docs/guides/integrations/bolt-core.mdx
@@ -3,7 +3,7 @@ title: "@thulite/bolt-core"
 description: Core integration for the Bolt theme
 type: integration
 stub: false
-service: "@thulite/bolt-core"
+service: "Bolt Core"
 category: theme
 ---
 
