--- a/src/content/docs/guides/integrations/bootstrap.mdx
+++ b/src/content/docs/guides/integrations/bootstrap.mdx
@@ -4,7 +4,7 @@ description: Bootstrap integration for Thulite
 editUrl: https://github.com/thuliteio/bootstrap/blob/main/README.md
 type: integration
 stub: false
-service: "@thulite/bootstrap"
+service: "Bootstrap"
 category: renderer
 ---
 import { LinkCard } from '@astrojs/starlight/components';
