--- a/src/content/docs/guides/integrations/core.mdx
+++ b/src/content/docs/guides/integrations/core.mdx
@@ -3,7 +3,7 @@ title: "@thulite/core"
 description: Core integration for Thulite
 type: integration
 stub: false
-service: "@thulite/core"
+service: "Core"
 category: other
 ---
 
