--- a/src/content/docs/guides/integrations/doks-core.mdx
+++ b/src/content/docs/guides/integrations/doks-core.mdx
@@ -3,7 +3,7 @@ title: "@thulite/doks-core"
 description: Core integration for the Doks theme
 type: integration
 stub: false
-service: "@thulite/doks-core"
+service: "Doks Core"
 category: theme
 ---
 
