--- a/src/content/docs/guides/integrations/images.mdx
+++ b/src/content/docs/guides/integrations/images.mdx
@@ -3,7 +3,7 @@ title: "@thulite/images"
 description: Official Images integration for Thulite
 type: integration
 stub: false
-service: "@thulite/images"
+service: "Images"
 category: other
 ---
 import List from '~/components/List.astro';
