--- a/src/content/docs/guides/integrations/inline-svg.mdx
+++ b/src/content/docs/guides/integrations/inline-svg.mdx
@@ -3,7 +3,7 @@ title: "@thulite/inline-svg"
 description: Official Inline SVG integration for Thulite
 type: integration
 stub: false
-service: "@thulite/inline-svg"
+service: "Inline SVG"
 category: other
 ---
 import List from '~/components/List.astro';
