--- a/src/content/docs/guides/integrations/seo.mdx
+++ b/src/content/docs/guides/integrations/seo.mdx
@@ -3,7 +3,7 @@ title: "@thulite/seo"
 description: Official SEO integration for Thulite
 type: integration
 stub: false
-service: "@thulite/seo"
+service: "SEO"
 category: other
 ---
 import List from '~/components/List.astro';
