--- a/src/content/docs/guides/integrations/tailwind.mdx
+++ b/src/content/docs/guides/integrations/tailwind.mdx
@@ -3,7 +3,7 @@ title: "@thulite/tailwindcss"
 description: Tailwind CSS integration for Thulite
 type: integration
 stub: false
-service: "@thulite/tailwindcss"
+service: "Tailwind CSS"
 category: renderer
 ---
 
