Update for LinkChecker

--- a/src/content/docs/guides/cms.mdx
+++ b/src/content/docs/guides/cms.mdx
@@ -32,4 +32,4 @@ Because Thulite takes care of the *presentation* of your content, you'll want to
 
 ## Can I use Thulite without a CMS?
 
-Yes! Thulite provides built-in ways to [author content](/guides/content/), including support for Markdown pages.
+Yes! Thulite provides built-in ways to [author content](/basics/pages/), including support for Markdown pages.
