--- a/src/content/docs/guides/integrations/bootstrap.mdx
+++ b/src/content/docs/guides/integrations/bootstrap.mdx
@@ -9,9 +9,7 @@ category: renderer
 ---
 import { LinkCard } from '@astrojs/starlight/components';
 
-This [Thulite integration](/add-ons/integrations/) adds
-
-Official Bootstrap integration for Thulite.
+Bootstrap integration for Thulite.
 
 ## Status
 
