--- a/src/content/docs/install/auto.mdx
+++ b/src/content/docs/install/auto.mdx
@@ -20,7 +20,7 @@ Read our [step-by-step manual installation guide](/install/manual/) instead.
 
 ## Installation
 
-`create-thulite` is the fastest way to start a new Thulite project from scratch. It will walk you through every step of setting up your new Thulite project. It allows you to choose from a few different official starter templates. Or, you can [use any existing project on GitHub with the `degit` command](http://localhost:4321/install/auto/#community).
+`create-thulite` is the fastest way to start a new Thulite project from scratch. It will walk you through every step of setting up your new Thulite project. It allows you to choose from a few different official starter templates. Or, you can [use any existing project on GitHub with the `degit` command](/install/auto/#community).
 
 :::tip[Online previews]
 Prefer to try Thulite in your browser? Visit [new.thulite.io](https://new.thulite.io/) to browse our starter templates and spin up a new Thulite project without ever leaving your browser.
