Add Email obfuscation guide

--- a/src/content/docs/guides/email-obfuscation.mdx
+++ b/src/content/docs/guides/email-obfuscation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Email obfuscation
-description: How use email obfuscation in Thulite
+description: This guide helps you to obfuscate email addresses with a simple, effective CSS technique.
 ---
 import { Steps } from '@astrojs/starlight/components';
 
